feat: [YAP-10] Simple Lobby setup with websocket (#1)
* simple lobby manager

* working lobbies with websocket chat

* join lobbies with 6 digit code

* fix lobby join messaging

* types
