# wukong/src/main.rs
@@ -4,14 +4,29 @@ use axum::{
 };
 use utoipa::OpenApi;
 use utoipa_swagger_ui::SwaggerUi;
+use tower_http::cors::{CorsLayer, Any};
+
+use std::sync::Arc;
+mod lobby_controller;
+mod websocket_controller;
+
+mod lobby;
+use lobby::lobby_manager::LobbyManager;
 
 #[derive(OpenApi)]
 #[openapi(
-    paths(hello_world),
+    paths(
+        ping,
+        lobby_controller::create_lobby,
+        lobby_controller::join_lobby
+    ),
+    components(
+        schemas(lobby_controller::CreateLobbyRequest, lobby_controller::JoinLobbyRequest)
+    ),
     info(
-        title = "Yappers API",
+        title = "Wukong API",
         version = "0.1.0",
-        description = "API for Yappers multiplayer party games"
+        description = "Yappers backend."
     )
 )]
 struct ApiDoc;
@@ -21,18 +36,28 @@ struct ApiDoc;
     get,
     path = "/",
     responses(
-        (status = 200, description = "Hello message", body = String)
+        (status = 200, description = "ping", body = String)
     )
 )]
-async fn hello_world() -> &'static str {
-    "Hello, World!"
+async fn ping() -> &'static str {
+    "pong"
 }
 
 #[tokio::main]
 async fn main() {
+    let lobby_manager = Arc::new(LobbyManager::new());
+
+    let cors = CorsLayer::new()
+        .allow_origin(Any)
+        .allow_methods(Any)
+        .allow_headers(Any);
+
     let app = Router::new()
-        .route("/", get(hello_world))
-        .merge(SwaggerUi::new("/swagger-ui").url("/api-docs/openapi.json", ApiDoc::openapi()));
+        .route("/", get(ping))
+        .merge(websocket_controller::routes(lobby_manager.clone()))
+        .merge(lobby_controller::routes(lobby_manager))
+        .merge(SwaggerUi::new("/swagger-ui").url("/api-docs/openapi.json", ApiDoc::openapi()))
+        .layer(cors);
 
     let listener = tokio::net::TcpListener::bind("0.0.0.0:8080")
         .await
